# SenseVoice-OpenAI-API

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/: main.py
tests/: test_smoke.py
