[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sense-voice-openai-api"
version = "1.0.0rc0"
description = "Capability Recommendation Copilot"
authors = [
    { name = "Pengxuan Men", email = "menpx@asiainfo.com" },
]
license = { text = "Proprietary" }
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.3.0+cpu; platform_machine != 'aarch64' and platform_machine != 'arm64'",
    "torch==2.3.0; platform_machine == 'aarch64' or platform_machine == 'arm64'",
    "torchaudio==2.3.0+cpu; platform_machine != 'aarch64' and platform_machine != 'arm64'",
    "torchaudio==2.3.0; platform_machine == 'aarch64' or platform_machine == 'arm64'",
    "funasr>=1.1.3",
    "numpy<=1.26.4",
    "fastapi>=0.111.1",
    "uvicorn",
    "python-multipart",
    "ffmpeg-python",
]

[project.optional-dependencies]
lint = [
    "flake8>=5.0.4,<6.0.0",
    "pyproject-flake8>=5.0.4,<6.0.0",
    "pre-commit>=3.6.0,<4.0.0",
    "isort>=5.13.1,<6.0.0",
    "black>=23.12.0,<24.0.0",
]
test = [
    "pytest>=7.4.3,<8.0.0",
    "coverage>=7.2.7,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
]
package = [
    "hatchling",
    "pip",
    "modelscope",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
python-install-mirror = "https://mirrors.aliyun.com/python-release/"
index-url = "https://mirrors.aliyun.com/pypi/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[tool.flake8]
max-line-length = 300
ignore = ['E203', 'E231', 'E241', 'W291', 'W293', 'W503', 'E501']
per-file-ignores = [
    '__init__.py:F401',
]
count = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except Exception as e:",
]
omit = ["src/main.py", "src/chat.py"]
